# vim: set noexpandtab:

2013-04-17 Steve
	* Changed default MET to Default in NtMaker
	* Minor code cleanup

2013-04-07 Steve
	* Merge with SusyCommon-00-00-66-branch
		* I was accidentally committing changes to this rather than trunk. Oops
	* Updated full dataset pileup file to 
	  $ROOTCOREDIR/data/MultiLep/ilumicalc_histograms_EF_2e12Tvh_loose1_200842-215643_v2.root
	* Changed HforToolD3PD setting to ALL
	* Tile trip cleaning cut functionality
		* Added passTileTrip method
		* Added tile trip cut to the SusyNtMaker cutflow
			* Ntuples are filtered on this cut. 
			  Do we need to be able to turn it off??
	* Tagging SusyCommon-00-00-68

2013-04-04 Matt
	* Added filtering flag m_filter
	* Added toggle in NtMaker to filter

2013-03-30 Steve
	* Tagging SusyCommon-00-00-67
		* No change from previous tag, due to accidental branch commits.
		  See note above

2013-03-13 Steve
	* Tagging SusyCommon-00-00-66

2013-03-11 davide
	* set value of Event::mllMcTruth according to IsAlpgenLowMass->MllForAlpgen, IsSherpaZll->MllForSherpa

2013-03-11 Matt
	* Added new muon vector for calculating the met with muons in 2.4<|eta|<2.5
	         * This was a 'bug' on our side and should be fixed for all analysis post conference
	* Added flag to turn on the use of these muons setUseMetMuons(bool) to use. 
	* Added option in NtMaker to set flag --useMetMuons
	* Fixed missing m_isMC in buggy sherpa method, otherwise would complain when running over data

2013-03-07 Davide
	* Add grid/countEventsPerSample.py

2013-03-06 Davide
	* Skip events with radiative b from buggy WW Sherpa samples (diff -r 318495:318496)
	* Add truth Higgs decay for WH (diff SusyCommon-00-00-62 SusyCommon-00-00-62-branch)

2013-03-01 Steve
	* Added byte check to tree->Fill in SusyNtMaker to hopefully catch write errors
	* Tagging SusyCommon-00-00-65

2013-02-24 Steve
	* Added more sample name checks for m_isSusySample: simplifiedModel, pMSSM